# meeting-transcriber

./: .gitignore  README.md  main.py  pyproject.toml  transcriber.py
tests/: test_audio.py  test_file_ops.py  test_gui.py  test_imports.py  test_transcriber.py
