[project]
name = "meeting-recorder"
version = "0.1.0"
description = "Live meeting transcription tool"
authors = [
    {name = "Matthew Miglio"}
]
requires-python = "^3.11"
dependencies = [
    "sounddevice (>=0.5.5,<0.6.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "faster-whisper (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
